--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
+    "sass": "^1.62.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.0.1",
@@ -17,6 +19,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-custom-alias": "^1.3.0",
+    "eslint-plugin-check-file": "^2.3.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
