--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.0.1"
+    "knex": "^2.4.2",
+    "mysql2": "^3.0.1",
+    "pg": "^8.11.1"
   },
   "devDependencies": {
     "eslint": "^8.32.0",
